--- a/example1.ipynb
+++ b/example1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPzv13A4FWLQmAoUz4KWXOf",
+      "authorship_tag": "ABX9TyOzMtJ4GYp8vRy+95lILiiA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,9 +51,22 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "<font size=6>\n",
+        "<font\\>"
+      ],
       "metadata": {
         "id": "5Sk3vc0nnzyo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<font size=\"6\"> الان نحدد الكائن الذي يمثل الشبكة\n",
+        "<font/>"
+      ],
+      "metadata": {
+        "id": "YPvLNW19hqsd"
       }
     },
     {
@@ -70,11 +83,11 @@
       ],
       "metadata": {
         "id": "90r83obunyV6",
-        "outputId": "d5f2aaaf-73d2-4f57-b067-7a305d20de74",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 225
-        }
+        },
+        "outputId": "d5f2aaaf-73d2-4f57-b067-7a305d20de74"
       },
       "execution_count": 2,
       "outputs": [
@@ -162,10 +175,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "<font size=\"6\">الان نحدد الكائن الذي يمثل الشبكة التي سنستخدمها في مثال الانحدار\n",
+        "<font/>"
+      ],
+      "metadata": {
+        "id": "suVPh2u_jhq4"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "S-UFJci_e9pN"
+        "id": "GV8_yKaHkKlj"
       },
       "execution_count": null,
       "outputs": []
